greyscale functionality achieved

--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <p>Etch a sketch</p>
     <div>
+        
         <div id="sketchPad">
             
 
+        </div>
+        <div>
+            <button id="greyscale">greyscale</button>
+            <button id="rainbow">rainbow</button>
         </div>
     </div>
 </body>
