opacity increment function simplified

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div>
             <button id="greyscale">greyscale</button>
             <button id="rainbow">rainbow</button>
+            <button id ='clear'>clear</button>
         </div>
     </div>
 </body>
