--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <p>Etch a sketch</p>
-    <div>        
-        <div id="sketchPad">         
-        </div>
-        <div>
-            <div>
-                <button id="greyscale">greyscale</button>
-                <button id="rainbow">rainbow</button>
-                <button id ='clear'>clear</button>
+        <p id="heading">Etch a sketch</p>
+        <div>        
+            <div id="sketchPad">         
             </div>
-            <div>
-                <input type='number' id="grid_size">
-                <button id="go">go</button>
-                
+            <div id="buttons">
+                <div>
+                    <button id="greyscale">greyscale</button>
+                    <button id="rainbow">rainbow</button>
+                    <button id ='clear'>clear</button>
+                </div>
+                <div>
+                    <input type='number' id="grid_size">
+                    <button id="go">go</button>
+                    
+                </div>
             </div>
         </div>
-    </div>
 </body>
 </html>
