input placeholder added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <button id ='clear'>clear</button>
                 </div>
                 <div>
-                    <input type='number' id="grid_size">
+                    <input type='number' id="grid_size" placeholder="enter grid width">
                     <button id="go">go</button>
                     
                 </div>
